# Demostation

./: .gitignore  README.md
ros2_ur3_project/: Dockerfile  docker-compose.yml  entrypoint.sh  wget-log
ros2_ur3_project/workspace/custom_code/: python_control.py  simple_ur_controller.py
ros2_ur3_project/workspace/custom_code/custom_ur_description/: CMakeLists.txt  package.xml
ros2_ur3_project/workspace/custom_code/custom_ur_description/config/ur10/: joint_limits.yaml
ros2_ur3_project/workspace/custom_code/custom_ur_description/launch/: ur_control.launch.py
ros2_ur3_project/workspace/custom_code/custom_ur_description/urdf/: CUSTOM_elementary_unit_macro.xacro  CUSTOM_station_macro.xacro  CUSTOM_ur3e.urdf.xacro
ros2_ur3_project/workspace/custom_code/custom_ur_moveit_config/: CMakeLists.txt  package.xml
ros2_ur3_project/workspace/custom_code/custom_ur_moveit_config/config/: joint_limits.yaml  kinematics.yaml
ros2_ur3_project/workspace/custom_code/custom_ur_moveit_config/launch/: combined_ur3e.launch.py  ur_moveit.launch.py
ros2_ur3_project/workspace/custom_code/custom_ur_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
